deployed US census analysis and edited other files

--- a/portfolio/advanced-decision-tree-classifier-US-Census.html
+++ b/portfolio/advanced-decision-tree-classifier-US-Census.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/data_analysis.png);
+        background: url(/images/census.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -3059,6 +3059,11 @@ border-radius: 0px;
         <li>Constructed a decision tree classifier to predict income levels and evaluated model performance with accuracy, sensitivity, and specificity metrics.</li>
         <li>Compared the performance of balanced and imbalanced datasets to identify the most effective approach.</li>
       </ul>
+      <h4><strong>About the Dataset</strong></h4>
+
+<p>
+  This dataset, extracted from the 1994 Census Bureau database by Ronny Kohavi and Barry Becker, contains 48,221 records and 15 attributes. It includes demographic and financial data to predict whether an individual earns more than $50K annually. Key features include age, education, occupation, and capital gain, with the goal of identifying patterns related to income levels.
+</p>
 
       <h4><strong>Libraries Used:</strong> rpart, rpart.plot, caret</h4>
     </div>
@@ -3604,7 +3609,7 @@ cat(&quot;Area Under the Curve: &quot;, area_under_the_curve, &quot;\n&quot;)</c
 <!-- rnb-output-end -->
 <!-- rnb-chunk-end -->
 <!-- rnb-text-begin -->
-<div id="findings" class="section level3">
+<div id="findings" class="section level3"></div>
 <h3>Key Findings</h3>
 
 <p>
