--- a/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
+++ b/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
@@ -176,7 +176,7 @@
 
 <meta name="date" content="2023-03-04" />
 
-<title>CS 422 Homework 4</title>
+<title>Hotel Cancelation Predicting Decision Tree Model</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
