added dataset descriptions to projects

--- a/portfolio/advertisement-analysis.html
+++ b/portfolio/advertisement-analysis.html
@@ -1783,8 +1783,7 @@ display: none;
 <div class="columns-container">
 <div class="column">
   <h4><strong>Instructor:</strong> <a href="https://youtu.be/8oDjrAknr4o?t=11"  style="color: rgb(47, 125, 203);">Vijay Gurbani (Chief Data Scientist at Vail Systems, Inc)</a></h4>
-  <h4><strong>Webpage Design</strong></h4>
-  <p>Hey there, welcome to my webpage! I've put this together myself. I wanted to step away from the usual look of sites like Medium or LinkedIn. The whole idea here is to use warm colors that are easy on the eyes, and to organize the content into clear sections for smooth browsing. You'll see R code on this page – that's all my own work, along with the comments and the output of the code. I've marked my comments with a '#' symbol and colored them blue to make them stand out." </p>
+
   <h4><strong>Data Analysis Summary</strong></h4>
 
   <ul>
@@ -1793,6 +1792,13 @@ display: none;
       <li>Calculated correlation coefficients to quantify the impact of each advertising medium on sales.</li>
       <li>Conducted a budget expenditure analysis to identify patterns in advertising spending.</li>
   </ul>
+
+  <h4><strong>About the Dataset</strong></h4>
+
+<p>
+  This dataset, titled "Advertising.csv," contains data designed for linear regression analysis. It includes 200 records and 5 features: TV, Radio, Newspaper, and Sales, which serve as the independent variables, with Sales being the target variable. The dataset is useful for exploring relationships between advertising spending and sales outcomes, making it ideal for predictive modeling and business analytics.
+</p>
+
 
   <h4><strong>Libraries Used:</strong> dplyr, psych</h4>
 
