--- a/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
+++ b/portfolio/decision-tree-classifier-hotel-booking-cancellations.html
@@ -1804,17 +1804,22 @@ display: none;
   <div class="columns-container">
   <div class="column">
     <h4><strong>Instructor:</strong> <a href="https://youtu.be/8oDjrAknr4o?t=11"  style="color: rgb(47, 125, 203);">Vijay Gurbani (Chief Data Scientist at Vail Systems, Inc)</a></h4>
-    <h4><strong>Webpage Design</strong></h4>
-    <p>Hey there, welcome to my webpage! I've put this together myself, taking cues from the background picture's color scheme. I wanted to step away from the usual look of sites like Medium or LinkedIn. The whole idea here is to use warm colors that are easy on the eyes, and to organize the content into clear sections for smooth browsing. You'll see R code on this page – that's all my own work, along with the comments and the output of the code. I've marked my comments with a '#' symbol and colored them blue to make them stand out. In this project, I also have white text comments above each section." </p>
+
     <h4><strong>Project Summary</strong></h4>
   
     <ul>
       <li>Cleaned the 'hotel_bookings.csv' dataset, adjusting columns, handling null values, and removing unnecessary columns.</li>
   <li>Analyzed booking cancellation rates, customer types, and car parking space requirements.</li>
-  <li>Investigated the most common customer type and analyzed the required car parking spaces.</li>
   <li>Identified the top countries of origin for both city and resort hotels.</li>
   <li>Split the data into training and testing sets, and constructed a classification model to predict booking cancellations.</li>
     </ul>
+
+    <h4><strong>About the Dataset</strong></h4>
+
+<p>
+  This dataset contains 119,390 records and 32 features, representing hotel bookings from City and Resort Hotels between July 1, 2015, and August 31, 2017. It includes details such as stay duration, room type, number of guests, meal preferences, and booking cancellations. Sensitive information, like customer identification, has been removed, while artificial fields for names, emails, phone numbers, and credit cards were added. The dataset is ideal for analyzing booking patterns and predicting cancellations.
+</p>
+
   
     <h4><strong>Libraries Used:</strong> xgboost, rpart, rpart.plot</h4>
   
