--- a/portfolio/neural-network-wifi.html
+++ b/portfolio/neural-network-wifi.html
@@ -9,11 +9,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="George Tapia (A20450857)" />
+<meta name="author" content="George Tapia" />
 
 <meta name="date" content="2023-04-24" />
 
-<title>Homework 8</title>
+<title>Neural Network</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -2883,8 +2883,8 @@ border-radius: 0px;
 
 
 
-<h1 class="title toc-ignore">Homework 8</h1>
-<h4 class="author">George Tapia (A20450857)</h4>
+<h1 class="title toc-ignore">Neural Network</h1>
+<h4 class="author">George Tapia </h4>
 <h4 class="date">2023-04-24</h4>
 
 </div>
