update associate rule mining webpage

--- a/portfolio/associate-rule-mining-apriori-algorithm.html
+++ b/portfolio/associate-rule-mining-apriori-algorithm.html
@@ -170,7 +170,7 @@ div.toc-content.col-xs-12.col-sm-8.col-md-9 {
     .sidebar .user__pic {
         width: 10rem;
         height: 10rem;
-        background: url(/images/census.png);
+        background: url(/images/bakery.png);
         background-size: cover;
         margin-right: 0.5rem;
         border-radius: 50%;
@@ -3370,8 +3370,10 @@ creating S4 object  ... done [0.00s].</code></pre>
 <br></br>
 <h4>Frequent Itemsets (1,000 Transactions) - Examples</h4>
 <p>
-    Here are two examples of frequent itemsets identified in the Tr1k dataset:
-</p>
+    Note: Click the white arrow facing right, on the items row, to see the support and count associated with each item. 
+ </p>   
+  <p>  Here are two examples of frequent itemsets identified in the Tr1k dataset:</p>
+
 <ul>
     <li><strong>Itemset:</strong> {Gongolais Cookie}, <strong>Support:</strong> 10.8%, <strong>Count:</strong> 108 transactions</li>
     <li><strong>Itemset:</strong> {Truffle Cake}, <strong>Support:</strong> 10.3%, <strong>Count:</strong> 103 transactions</li>
